--- a/.rvmrc
+++ b/.rvmrc
@@ -1,3 +1,3 @@
-rvm use 1.9.2@heroku-buildpack-ruby
+rvm use 1.9.2@heroku-buildpack-ruby --create
 
 if [[ -s $PWD/.rvmrc.local ]] ; then source $PWD/.rvmrc.local; fi
